@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="version">1.6.1-rc1</string>
+    <string name="version">1.6.1</string>
 </resources>
